feat: new theme, lots of style changes and documentation progress

--- a/src/components/actions/Button/Button.docs.mdx
+++ b/src/components/actions/Button/Button.docs.mdx
@@ -21,22 +21,22 @@ classes:
     description: Removes the background of the button
   - name: btn-info
     type: modifier
-    description: Changes the button to the info color
+    description: Changes the color of the button to info
   - name: btn-success
     type: modifier
-    description: Changes the button to the success color
+    description: Changes the color of the button to success
   - name: btn-warning
     type: modifier
-    description: Changes the button to the warning color
+    description: Changes the color of the button to warning
   - name: btn-error
     type: modifier
-    description: Changes the button to the error color
+    description: Changes the color of the button to error
   - name: btn-icon-left
     type: modifier
-    description: Adjusts the left padding to accommodate an icon
+    description: Reduces the left padding to accommodate an icon
   - name: btn-icon-right
     type: modifier
-    description: Adjusts the right padding to accommodate an icon
+    description: Reduces the right padding to accommodate an icon
   - name: btn-icon
     type: modifier
     description: Circular button with a 1:1 aspect ratio
@@ -117,23 +117,23 @@ published: true
   <>
     <button className="btn btn-icon-left">
       <MdShoppingCart size={18} />
-      Add to cart
+      Add
     </button>
     <button className="btn btn-icon-left btn-tonal">
       <MdShoppingCart size={18} />
-      Add to cart
+      Add
     </button>
     <button className="btn btn-icon-left btn-outlined">
       <MdShoppingCart size={18} />
-      Add to cart
+      Add
     </button>
     <button className="btn btn-icon-left btn-elevated">
       <MdShoppingCart size={18} />
-      Add to cart
+      Add
     </button>
     <button className="btn btn-icon-left btn-text">
       <MdShoppingCart size={18} />
-      Add to cart
+      Add
     </button>
   </>
 </CodePreview>
@@ -141,23 +141,23 @@ published: true
 <CodePreview title="With right icon">
   <>
     <button className="btn btn-icon-right">
-      Add to cart
+      Add
       <MdShoppingCart size={18} />
     </button>
     <button className="btn btn-icon-right btn-tonal">
-      Add to cart
+      Add
       <MdShoppingCart size={18} />
     </button>
     <button className="btn btn-icon-right btn-outlined">
-      Add to cart
+      Add
       <MdShoppingCart size={18} />
     </button>
     <button className="btn btn-icon-right btn-elevated">
-      Add to cart
+      Add
       <MdShoppingCart size={18} />
     </button>
     <button className="btn btn-icon-right btn-text">
-      Add to cart
+      Add
       <MdShoppingCart size={18} />
     </button>
   </>
