--- a/src/components/containment/Table/Table.docs.mdx
+++ b/src/components/containment/Table/Table.docs.mdx
@@ -2,66 +2,39 @@
 type: component
 title: table
 category: containment
-description: Snackbars provide brief messages about app processes at the bottom of the screen.
+description: Tables are used to display data in a tabular format.
 classes:
-  - name: snackbar
+  - name: table
     type: component
-    description: The snackbar container
-  - name: snackbar-content
-    type: component
-    description: The text content of the snackbar
-  - name: snackbar-close
-    type: component
-    description: The close button of the snackbar
-  - name: snackbar-action
-    type: component
-    description: The action button of the snackbar
+    description: The table container
 published: true
 ---
 
 <CodePreview title="Default">
-  <div className="snackbar">
-    <span className="snackbar-content">This is a snackbar.</span>
-    <button className="snackbar-close">
-      <MdClose size={20} />
-    </button>
-  </div>
-</CodePreview>
-
-<CodePreview title="Without close button">
-  <div className="snackbar">
-    <span className="snackbar-content">This is a snackbar without a close button.</span>
-  </div>
-</CodePreview>
-
-<CodePreview title="With action">
-  <div className="snackbar">
-    <span className="snackbar-content">This is a snackbar with an action button.</span>
-    <button className="snackbar-action">Action</button>
-  </div>
-</CodePreview>
-
-<CodePreview title="Without close button with action">
-  <div className="snackbar">
-    <span className="snackbar-content">Can't send photo. Retry in 5 seconds.</span>
-    <button className="snackbar-action">Retry</button>
-    <button className="snackbar-close">
-      <MdClose size={20} />
-    </button>
-  </div>
-</CodePreview>
-
-<CodePreview title="Without close button with action">
-  <RadixToastProvider duration={999999}>
-    <RadixToastRoot className="snackbar transition-transform ease-linear data-[swipe=cancel]:translate-x-0 data-[swipe=move]:translate-x-[var(--radix-toast-swipe-move-x)]">
-      <span className="snackbar-content">Can't send photo. Retry in 5 seconds.</span>
-      <RadixToastAction altText="retry" className="snackbar-action">
-        Retry
-      </RadixToastAction>
-      <RadixToastClose className="snackbar-close">
-        <MdClose size={20} />
-      </RadixToastClose>
-    </RadixToastRoot>
-    <RadixToastViewport />
-  </RadixToastProvider>
+  <table className="table">
+    <thead>
+      <tr>
+        <th>Language</th>
+        <th>Creator</th>
+        <th>Year</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Python</td>
+        <td>Guido van Rossum</td>
+        <td>1991</td>
+      </tr>
+      <tr>
+        <td>JavaScript</td>
+        <td>Brendan Eich</td>
+        <td>1995</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>James Gosling</td>
+        <td>1995</td>
+      </tr>
+    </tbody>
+  </table>
 </CodePreview>
